--- a/liquidwar6/data/snd/ogg/Makefile.am
+++ b/liquidwar6/data/snd/ogg/Makefile.am
@@ -18,7 +18,7 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-SUBDIRS = sound water
+SUBDIRS = fx water
 
 pkgdata_DATA = README ogg-const.xml
 pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/data/snd/ogg
