--- a/liquidwar6/data/snd/ogg/Makefile.in
+++ b/liquidwar6/data/snd/ogg/Makefile.in
@@ -330,7 +330,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = sound water
+SUBDIRS = fx water
 pkgdata_DATA = README ogg-const.xml
 EXTRA_DIST = $(pkgdata_DATA)
 all: all-recursive
