--- a/liquidwar6/src/lib/snd/mod-ogg/Makefile.in
+++ b/liquidwar6/src/lib/snd/mod-ogg/Makefile.in
@@ -105,9 +105,9 @@ libmod_ogg_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(libmod_ogg_la_LDFLAGS) $(LDFLAGS) -o $@
 @ALLINONE_FALSE@am_libmod_ogg_la_rpath = -rpath $(libdir)
 libmod_ogg_s_la_LIBADD =
-am__objects_1 = mod-ogg-backend.lo mod-ogg-const.lo mod-ogg-music.lo \
-	mod-ogg-path.lo mod-ogg-repr.lo mod-ogg-setup.lo \
-	mod-ogg-sound.lo mod-ogg-volume.lo
+am__objects_1 = mod-ogg-backend.lo mod-ogg-const.lo mod-ogg-fx.lo \
+	mod-ogg-music.lo mod-ogg-path.lo mod-ogg-repr.lo \
+	mod-ogg-setup.lo mod-ogg-volume.lo
 am_libmod_ogg_s_la_OBJECTS = $(am__objects_1)
 libmod_ogg_s_la_OBJECTS = $(am_libmod_ogg_s_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -326,7 +326,7 @@ AM_CFLAGS = @LW6_CFLAGS@ @SDL_CFLAGS@
 @ALLINONE_FALSE@AM_LDFLAGS = @LW6_LDFLAGS@ @SDL_LIBS_SOUND@
 @ALLINONE_TRUE@AM_LDFLAGS = @LW6_LDFLAGS@
 noinst_LTLIBRARIES = libmod_ogg_s.la
-MOD_OGG_FILES = mod-ogg-backend.c mod-ogg-const.c mod-ogg-music.c mod-ogg-path.c mod-ogg-repr.c mod-ogg-setup.c mod-ogg-sound.c mod-ogg-volume.c
+MOD_OGG_FILES = mod-ogg-backend.c mod-ogg-const.c mod-ogg-fx.c mod-ogg-music.c mod-ogg-path.c mod-ogg-repr.c mod-ogg-setup.c mod-ogg-volume.c
 libmod_ogg_s_la_SOURCES = $(MOD_OGG_FILES) 
 @ALLINONE_FALSE@lib_LTLIBRARIES = libmod_ogg.la
 @ALLINONE_FALSE@libmod_ogg_la_SOURCES = 
@@ -422,11 +422,11 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-ogg-backend.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-ogg-const.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-ogg-fx.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-ogg-music.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-ogg-path.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-ogg-repr.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-ogg-setup.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-ogg-sound.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mod-ogg-volume.Plo@am__quote@
 
 .c.o:
