--- a/liquidwar6/src/lib/map/Makefile.in
+++ b/liquidwar6/src/lib/map/Makefile.in
@@ -80,9 +80,10 @@ CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libmap_la_LIBADD =
 am_libmap_la_OBJECTS = map-body.lo map-color.lo map-coords.lo \
-	map-dup.lo map-hexa.lo map-layer.lo map-level.lo \
-	map-localinfo.lo map-metadata.lo map-metalayer.lo map-rules.lo \
-	map-param.lo map-style.lo map-test.lo map-texture.lo
+	map-cursortexture.lo map-dup.lo map-hexa.lo map-layer.lo \
+	map-level.lo map-localinfo.lo map-metadata.lo map-metalayer.lo \
+	map-rules.lo map-param.lo map-style.lo map-test.lo \
+	map-texture.lo
 libmap_la_OBJECTS = $(am_libmap_la_OBJECTS)
 am__installdirs = "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libmapdir)"
 PROGRAMS = $(libexec_PROGRAMS)
@@ -330,7 +331,7 @@ top_srcdir = @top_srcdir@
 AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 noinst_LTLIBRARIES = libmap.la
-libmap_la_SOURCES = map-body.c map-color.c map-coords.c map-dup.c map-hexa.c map-layer.c map-level.c map-localinfo.c map-metadata.c map-metalayer.c map-rules.c map-param.c map-style.c map-test.c map-texture.c
+libmap_la_SOURCES = map-body.c map-color.c map-coords.c map-cursortexture.c map-dup.c map-hexa.c map-layer.c map-level.c map-localinfo.c map-metadata.c map-metalayer.c map-rules.c map-param.c map-style.c map-test.c map-texture.c
 libmapdir = $(includedir)/@PACKAGE_TARNAME@/map
 libmap_HEADERS = map.h
 @FULLSTATIC_FALSE@liquidwar6map_test_SOURCES = map-testmain.c
@@ -436,6 +437,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/map-body.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/map-color.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/map-coords.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/map-cursortexture.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/map-dup.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/map-hexa.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/map-layer.Plo@am__quote@
