--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -88,6 +88,7 @@ src/lib/gfx/mod-gl/gl-utils/gl-utils-info.c
 src/lib/gfx/mod-gl/gl-utils/gl-utils-resolution.c
 src/lib/gfx/mod-gl/gl-utils/gl-utils-data.c
 src/lib/gfx/mod-gl/gl-utils/gl-utils-texture.c
+src/lib/gfx/mod-gl/gl-utils/gl-utils-cursor.c
 src/lib/gfx/mod-gl/gl-utils/gl-utils-debug.c
 src/lib/gfx/mod-gl/gl-utils/gl-utils-render.c
 src/lib/gfx/mod-gl/gl-utils/gl-utils-surface.c
@@ -140,6 +141,7 @@ src/lib/map/map-level.c
 src/lib/map/map-metalayer.c
 src/lib/map/map-cursortexture.c
 src/lib/map/map-hexa.c
+src/lib/map/map-cursortexturelayer.c
 src/lib/map/map-param.c
 src/lib/map/map-metadata.c
 src/lib/map/map-body.c
