--- a/liquidwar6/doc/Makefile.gdoc
+++ b/liquidwar6/doc/Makefile.gdoc
@@ -66,6 +66,9 @@ $(srcdir)/p2p-gdoc.texi: ../src/lib/p2p/p2p-backends.c ../src/lib/p2p/p2p-clioob
 $(srcdir)/pil-gdoc.texi: ../src/lib/pil/pil-bench.c ../src/lib/pil/pil-command.c ../src/lib/pil/pil-compute.c ../src/lib/pil/pil-coords.c ../src/lib/pil/pil.h ../src/lib/pil/pil-internal.h ../src/lib/pil/pil-localcursors.c ../src/lib/pil/pil-pilot.c ../src/lib/pil/pil-spread.c ../src/lib/pil/pil-test.c ../src/lib/pil/pil-testmain.c ../src/lib/pil/pil-worker.c
 	echo gdoc pil && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/pil-gdoc.texi
 
+$(srcdir)/scm-gdoc.texi: ../src/lib/scm/scm.h ../src/lib/scm/scm-test.c ../src/lib/scm/scm-testmain.c ../src/lib/scm/scm-wrapper.c
+	echo gdoc scm && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/scm-gdoc.texi
+
 $(srcdir)/snd-gdoc.texi: ../src/lib/snd/snd-api.c ../src/lib/snd/snd.h ../src/lib/snd/snd-register.c ../src/lib/snd/snd-test.c ../src/lib/snd/snd-testmain.c
 	echo gdoc snd && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/snd-gdoc.texi
 
@@ -77,6 +80,9 @@ $(srcdir)/sys-gdoc.texi: ../src/lib/sys/sys-arg.c ../src/lib/sys/sys-assoc.c ../
 
 $(srcdir)/tsk-gdoc.texi: ../src/lib/tsk/tsk.h ../src/lib/tsk/tsk-internal.h ../src/lib/tsk/tsk-loader.c ../src/lib/tsk/tsk-test.c ../src/lib/tsk/tsk-testmain.c
 	echo gdoc tsk && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/tsk-gdoc.texi
+
+$(srcdir)/mod-brute-gdoc.texi: ../src/lib/bot/mod-brute/mod-brute-backend.c ../src/lib/bot/mod-brute/mod-brute-setup.c ../src/lib/bot/mod-brute/mod-brute.h ../src/lib/bot/mod-brute/mod-brute-internal.h ../src/lib/bot/mod-brute/mod-brute-repr.c ../src/lib/bot/mod-brute/mod-brute-move.c
+	echo gdoc mod-brute && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-brute-gdoc.texi
 
 $(srcdir)/mod-follow-gdoc.texi: ../src/lib/bot/mod-follow/mod-follow-move.c ../src/lib/bot/mod-follow/mod-follow-setup.c ../src/lib/bot/mod-follow/mod-follow-internal.h ../src/lib/bot/mod-follow/mod-follow.h ../src/lib/bot/mod-follow/mod-follow-backend.c ../src/lib/bot/mod-follow/mod-follow-repr.c
 	echo gdoc mod-follow && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/mod-follow-gdoc.texi
