--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -2,6 +2,10 @@ src/lib/bot/bot-api.c
 src/lib/bot/bot-register.c
 src/lib/bot/bot-test.c
 src/lib/bot/bot-testmain.c
+src/lib/bot/mod-brute/mod-brute-backend.c
+src/lib/bot/mod-brute/mod-brute-move.c
+src/lib/bot/mod-brute/mod-brute-repr.c
+src/lib/bot/mod-brute/mod-brute-setup.c
 src/lib/bot/mod-follow/mod-follow-backend.c
 src/lib/bot/mod-follow/mod-follow-move.c
 src/lib/bot/mod-follow/mod-follow-repr.c
@@ -328,6 +332,9 @@ src/lib/pil/pil-spread.c
 src/lib/pil/pil-test.c
 src/lib/pil/pil-testmain.c
 src/lib/pil/pil-worker.c
+src/lib/scm/scm-test.c
+src/lib/scm/scm-testmain.c
+src/lib/scm/scm-wrapper.c
 src/lib/snd/mod-csound/mod-csound-backend.c
 src/lib/snd/mod-csound/mod-csound-fx.c
 src/lib/snd/mod-csound/mod-csound-music.c
