--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -25,6 +25,7 @@ src/lib/cfg/cfg-format.c
 src/lib/cfg/cfg-load.c
 src/lib/cfg/cfg-option.c
 src/lib/cfg/cfg-save.c
+src/lib/cfg/cfg-score.c
 src/lib/cfg/cfg-setup.c
 src/lib/cfg/cfg-test.c
 src/lib/cfg/cfg-testmain.c
@@ -229,6 +230,7 @@ src/lib/ker/ker-teammask.c
 src/lib/ker/ker-test.c
 src/lib/ker/ker-testmain.c
 src/lib/ker/ker-trigo.c
+src/lib/ker/ker-weapon.c
 src/lib/ker/ker-zonestate.c
 src/lib/ker/ker-zonestruct.c
 src/lib/ldr/ldr-body.c
