--- a/liquidwar6/src/lib/ker/Makefile.in
+++ b/liquidwar6/src/lib/ker/Makefile.in
@@ -86,7 +86,7 @@ am_libker_la_OBJECTS = ker-armies.lo ker-capture.lo ker-cursor.lo \
 	ker-placestruct.lo ker-score.lo ker-scorearray.lo \
 	ker-slotstate.lo ker-slotstruct.lo ker-spread.lo ker-tables.lo \
 	ker-team.lo ker-teammask.lo ker-test.lo ker-trigo.lo \
-	ker-zonestate.lo ker-zonestruct.lo
+	ker-weapon.lo ker-zonestate.lo ker-zonestruct.lo
 libker_la_OBJECTS = $(am_libker_la_OBJECTS)
 am__installdirs = "$(DESTDIR)$(libexecdir)" "$(DESTDIR)$(libkerdir)"
 PROGRAMS = $(libexec_PROGRAMS)
@@ -336,7 +336,7 @@ top_srcdir = @top_srcdir@
 AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ 
 noinst_LTLIBRARIES = libker.la
-libker_la_SOURCES = ker-armies.c ker-capture.c ker-cursor.c ker-cursorarray.c ker-fighter.c ker-gamestate.c ker-gamestruct.c ker-history.c ker-mapstate.c ker-mapstruct.c ker-move.c ker-node.c ker-nodearray.c ker-placestruct.c ker-score.c ker-scorearray.c ker-slotstate.c ker-slotstruct.c ker-spread.c ker-tables.c ker-team.c ker-teammask.c ker-test.c ker-trigo.c ker-zonestate.c ker-zonestruct.c
+libker_la_SOURCES = ker-armies.c ker-capture.c ker-cursor.c ker-cursorarray.c ker-fighter.c ker-gamestate.c ker-gamestruct.c ker-history.c ker-mapstate.c ker-mapstruct.c ker-move.c ker-node.c ker-nodearray.c ker-placestruct.c ker-score.c ker-scorearray.c ker-slotstate.c ker-slotstruct.c ker-spread.c ker-tables.c ker-team.c ker-teammask.c ker-test.c ker-trigo.c ker-weapon.c ker-zonestate.c ker-zonestruct.c
 libkerdir = $(includedir)/@PACKAGE_TARNAME@/ker
 libker_HEADERS = ker.h 
 @FULLSTATIC_FALSE@liquidwar6ker_test_SOURCES = ker-testmain.c
@@ -465,6 +465,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-test.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-testmain.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-trigo.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-weapon.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-zonestate.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ker-zonestruct.Plo@am__quote@
 
