Added new (but empty) voxel rendering module. Who knows...

--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -725,6 +725,7 @@ AC_CONFIG_FILES([Makefile
 	  src/lib/ldr/ldr-png.h
 	  src/lib/tsk/Makefile
 	  src/lib/gui/Makefile
+	  src/lib/vox/Makefile
 	  src/lib/gfx/Makefile
   	  src/lib/gfx/mod-gl/Makefile
  	  src/lib/gfx/mod-gl/gl-utils/Makefile
